--- a/composer.json
+++ b/composer.json
@@ -1,28 +1,29 @@
 {
-    "name": "moki74/laravel-btc",
-    "description": "Payment system for btc with bitcoind",
+    "name": "payaccept/laravel-paychain",
+    "description": "Laravel package for implementing PayChain blockchain",
+    "type": "project",
     "license": "MIT",
     "authors": [
         {
-            "name": "moki74",
-            "email": "imojovic@gmail.com"
+            "name": "PayAccept Developers",
+            "email": "dev@payaccept.net"
         }
     ],
 
    "require": {
-        "php": ">=5.6.0"       
+        "php": ">=5.6.0"
     },
-    
+
     "autoload": {
         "psr-4": {
-            "moki74\\LaravelBtc\\": "src"
+            "PayAccept\\LaravelPaychain\\": "src"
         }
     },
 
      "extra": {
         "laravel": {
             "providers": [
-                "moki74\\LaravelBtc\\BitcoinPaymentServiceProvider"
+                "PayAccept\\LaravelPaychain\\PaychainPaymentServiceProvider"
             ]
         }
     }
